--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <meta name="description" content="Personal website of Sahil Saboo.">
     <link rel="stylesheet" href="styles.css">
     <style>
-        body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #222; }
-        header { background: #222; color: #fff; padding: 2rem 0; text-align: center; }
-        main { max-width: 800px; margin: 2rem auto; padding: 2rem; background: #fff; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); }
-        h1 { margin-top: 0; }
-        a { color: #0078d7; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        footer { text-align: center; color: #888; margin: 2rem 0 1rem 0; font-size: 0.9rem; }
+        body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; padding: 0; background: linear-gradient(135deg, #f3e7fa 0%, #e3d0ff 100%); color: #2d1a47; }
+        header { background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%); color: #fff; padding: 2.5rem 0 2rem 0; text-align: center; box-shadow: 0 4px 16px rgba(106,17,203,0.08); }
+        main { max-width: 820px; margin: 2.5rem auto; padding: 2.5rem; background: #fff; border-radius: 18px; box-shadow: 0 4px 24px rgba(106,17,203,0.10); }
+        h1 { margin-top: 0; font-size: 2.8rem; letter-spacing: 1px; font-weight: 700; }
+        h2 { color: #6a11cb; margin-top: 2rem; font-size: 1.5rem; }
+        a { color: #6a11cb; text-decoration: none; font-weight: 500; transition: color 0.2s; }
+        a:hover { color: #2575fc; text-decoration: underline; }
+        ul { padding-left: 1.2rem; }
+        li { margin-bottom: 0.5rem; }
+        section { margin-bottom: 2.5rem; }
+        footer { text-align: center; color: #a18cd1; margin: 2.5rem 0 1.5rem 0; font-size: 1rem; letter-spacing: 0.5px; }
+        @media (max-width: 600px) {
+            main { padding: 1rem; }
+            h1 { font-size: 2rem; }
+            h2 { font-size: 1.1rem; }
+        }
     </style>
 </head>
 <body>
